Neural Network testing 1. data_reduction_PS: updated and removed some hardcoded values. 2. home-credit-data-cleaning-nn.ipynb: Added - run a neural network on the master-data csv. 3. classification.py: Significantly improved to work with master data csv. Currently works only with numerical data.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "cSpell.words": [
         "Kaggle",
         "lendees"
-    ]
+    ],
+    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.autoImportCompletions": true
 }
